--- a/style.css
+++ b/style.css
@@ -187,3 +187,9 @@ body {
   padding-left: 25px;
   background-image: url("img/icon-phone.svg");
 }
+
+.avatar
+{
+border-radius: 20%;
+border: 3px solid white;
+}
