--- a/style.css
+++ b/style.css
@@ -177,11 +177,11 @@ body {
   position: relative;
 }
 
-.user-image {
+/*.user-image {
   position: absolute;
   margin: 0;
 }
-
+*/
 .user-image img {
   width: 640px;
   height: 640px;
@@ -274,12 +274,9 @@ body {
   padding-left: 528px;
 }
 
-.project-image {
-  position: absolute;
-  top: 0;
-  left: 0;
-  margin: 0;
-}
+/*.project-image {
+  position: inherit;
+}*/
 
 .project-image img {
   width: 448px;
@@ -322,4 +319,11 @@ body {
 .page-footer {
   padding: 40px 0;
   background-color: #212349;
+}
+
+.avatar
+{
+border-radius: 20%;
+border: 3px solid white;
+align-self: center;
 }
